[project]
name = "payment-service"
version = "0.1.0"
description = "Async payment processing service with outbox pattern"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
