[project]
name = "payment-service"
version = "0.1.0"
description = "Async payment processing service with outbox pattern"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.1",
    "psycopg>=3.2.0",
    "asyncpg>=0.30.0",
    "faststream[rabbit]>=0.5.27",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==4.1.0",
    "testcontainers[postgres,rabbitmq]==4.8.1",
    "ruff==0.6.0",
    "mypy==1.11.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
